fix feature section mobile layout responsive

--- a/sunnyside-agency-landing-page-main/sunnyside-agency-landing-page-main/css/global/global.sass
+++ b/sunnyside-agency-landing-page-main/sunnyside-agency-landing-page-main/css/global/global.sass
@@ -169,6 +169,13 @@ a
                 color: #24303E
                 margin-bottom: 30px
 
+            .message-title-mobile
+                display: none
+                text-align: center
+                font-size: 40px
+                color: #24303E
+                margin-bottom: 30px
+
             .message-text
                 font-size: 25px
                 color: #A7A7A7
