--- a/sunnyside-agency-landing-page-main/sunnyside-agency-landing-page-main/css/global/media-queries.sass
+++ b/sunnyside-agency-landing-page-main/sunnyside-agency-landing-page-main/css/global/media-queries.sass
@@ -47,3 +47,17 @@
         .header-container
             h1
                 font-size: 60px
+
+    .message-title 
+        display: none
+
+    .message-title-mobile
+        display: block !important 
+        
+    .message-text 
+        text-align: center
+        font-size: 20px !important
+
+    .btn-link 
+        margin: 0 auto
+        font-size: 18px
